[package]
name = "torrent"
version = "0.1.0"
authors = ["Daniel Rivas <daniel.rivas@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"]}
reqwest = "0.11"
structopt = "0.3"
serde ={ version =  "1.0", features = [ "derive" ] }
serde_bencode = "0.2"
serde_bytes = "0.11"
anyhow = "1.0"
sha-1 = "0.9"
bytes = "1.0"
futures = "0.3"
pretty_env_logger = "0.4"
log = "0.4"
async-channel = "1.6"
